# fA2025

./: .env.example  .gitignore  .replit  .replit.workflow.Frontend.yaml  .replit.workflow.combined.yaml  .replit.workflow.frontend.yaml  .replit.workflow.knowledge_demo.yaml  .replit.workflow.knowledge_server.yaml  .replit.workflow.knowledge_test.yaml  .replit.workflow.react_frontend.yaml  .replit.workflow.start_frontend.yaml  .replit.workflow.start_knowledge_demo  .replit.workflow.start_react_frontend  AI_SERVICES.md  API_REFERENCE.md  API_REFERENCE_SLACK.md  CODE_CLEANUP.md  DATABASE_MIGRATIONS.md  DEPENDENCY_MANAGEMENT.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  FRONT_END.md  Full Slack Bot with LangChain, FAISS, and History  INTEGRATION_STANDARDS.md  KNOWLEDGE_AI_INTEGRATION.md  KNOWLEDGE_BASE_API.md  KNOWLEDGE_BASE_FILE_PARSER.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README.md  README_KNOWLEDGE_BASE.md  SETUP_GUIDE.md  SLACK_INTEGRATION.md  SLACK_SETUP_GUIDE.md  SUBSCRIPTION_MANAGEMENT.md  Train Your FAISS Index  add_analytics_endpoints.py  add_auth_id_column.py  add_direct_knowledge_tags.py  add_fixed_email_endpoints.py  (+239 more)
attached_assets/: IntegrationGuide.tsx  KnowledgeBase.tsx  Pasted--Questions-You-Need-to-Answer-Authentication-Token-Handling-Is-the-frontend-consistently-inclu-1743884692592.txt  Pasted--WARNING-utils-supabase-extension-Error-executing-SQL-statement-relation-integrations-config-doe-1743417457558.txt  Pasted-025-04-03-09-04-37-281-dana-ai-WARNING-Error-executing-SQL-statement-policy-user-token-usage-1743671263437.txt  Pasted-A-great-interactive-landing-page-for-a-software-product-should-balance-aesthetic-appeal-with-functio-1743367519493.txt  Pasted-ERROR-main-Error-setting-up-CSRF-blueprint-cannot-import-name-get-db-connection-from-utils-db-co-1746816200623.txt  Pasted-ERROR-main-Error-setting-up-CSRF-blueprint-cannot-import-name-validate-csrf-token-from-utils-csr-1746817103686.txt  Pasted-Great-you-re-sitting-on-a-fairly-common-but-critical-architectural-problem-schema-drift-in-1746606284144.txt  Pasted-Thank-you-for-the-detailed-explanation-Based-on-your-analysis-the-issue-arises-from-a-mismatch-bet-1744239504838.txt  (+3 more)
automation/: __init__.py
backend/: README.md  main.py  models.py
config/: notifications_config.json  (+1 more)
(+380 files in other folders)
